--- a/FSM.X/nbproject/Makefile-genesis.properties
+++ b/FSM.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Mon Nov 28 09:23:11 CET 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.10\\mpasmx
-configurations-xml=1d0ada3c964b6296fc78b66f54a65d8c
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=17a71d03e7d3823160f3e8681fc226e8
-default.languagetoolchain.version=5.63
+#Wed Nov 30 14:48:52 CET 2016
+default.languagetoolchain.dir=F\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.26\\mpasmx
+configurations-xml=65ea00fdd3ec415d5fcf2c86f09ef2b3
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
+default.languagetoolchain.version=5.66
 host.platform=windows
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=83d38101d39114ecdf40cee6a5d3ea0a
+default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=c898661dcfb2813062f684eda534ca20
